--- a/algorithms_fixed_point_sqrt/README
+++ b/algorithms_fixed_point_sqrt/README
@@ -113,5 +113,5 @@ README            - this file
 
 Running the Design
 =================================================
-autoesl -f run_hls.tcl
+vivado_hls -f run_hls.tcl
 
