--- a/algorithms_floating_mult_power_of_2/README
+++ b/algorithms_floating_mult_power_of_2/README
@@ -115,5 +115,5 @@ README             - this file
 
 Running the Design
 =================================================
-autoesl -f run_hls.tcl
+vivado_hls -f run_hls.tcl
 
