--- a/coding_loop_labels/README
+++ b/coding_loop_labels/README
@@ -1,7 +1,7 @@
 /*******************************************************************************
 Vendor: Xilinx 
-Associated Filename: matrixmul.cpp
-Purpose: Matrix multiplication example for AutoESL
+Associated Filename: README
+Purpose: Using loop labels in Vivado HLS example
 Revision History: February 13, 2012 - initial release
                                                 
 *******************************************************************************
@@ -88,29 +88,16 @@ THIS COPYRIGHT NOTICE AND DISCLAIMER MUST BE RETAINED AS PART OF THIS FILE AT
 ALL TIMES.
 
 *******************************************************************************/
-#include "matrixmul.h"
+/*
+ * Example C code for using loop labels in Vivado HLS
+ */
 
-void matrixmul(
-      mat_a_t a[MAT_A_ROWS][MAT_A_COLS],
-      mat_b_t b[MAT_B_ROWS][MAT_B_COLS],
-      result_t res[MAT_A_ROWS][MAT_B_COLS])
-{
+Files Included in this Package
+==================================================
+example_test.cpp
+example.cpp
+README
 
- result_t temp;
-
- // Generate the expected result
- // Iterate over the rows of the A matrix
- I_LOOP:  for(int i = 0; i < MAT_A_ROWS; i++) {
- J_LOOP:     for(int j = 0; j < MAT_B_COLS; j++) {
-     // Iterate over the columns of the B matrix
-     // Do the inner product of a row of A and col of B
-   K_LOOP:      for(int k = 0; k < MAT_B_ROWS; k++) {
-       if(k==0)
-	 temp = 0;
-       temp += a[i][k] * b[k][j];
-       if(k == (MAT_B_ROWS - 1))
-	 res[i][j] = temp;
-     }
-   }
- }
-}
+Running the Design (edit x_hls.tcl to run synthesis)
+=================================================
+vivado_hls -f run_hls.tcl
