--- a/algorithm_2D_convolution_linebuffer/README
+++ b/algorithm_2D_convolution_linebuffer/README
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2019 Xilinx, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 Example C code for implementing an 2D convolution in HLS
 
@@ -9,7 +24,7 @@ README
 
 Running the Design (edit x_hls.tcl to specific run steps)
 =========================================================
-vivado_hls -f run_hls.tcl
+vitis_hls -f run_hls.tcl
 
 This design is discussed in the Vivado HLS UltraFAST Methodology in the section "Writing Hardware Efficient C Code".
 The attributes of this design which ensure an implementation with high Quality of Results are:
