--- a/algorithm_window_function_fixed_point/README
+++ b/algorithm_window_function_fixed_point/README
@@ -39,5 +39,4 @@ README             - this file
 
 Running the Design
 =================================================
-autoesl -f run_hls.tcl
-
+vitis_hls -f run_hls.tcl
