--- a/coding_vectorized/README
+++ b/coding_vectorized/README
@@ -1,6 +1,8 @@
 /*
- * Example C++ code for using vectorized type in Vitis HLS
- * Requires C++14
+ * Example C++ code for using vector data type in Vitis HLS.
+ * They can be declared using the C++ attribute vector_size or 
+ * through the hls_vector.h library which also supports HLS arbitrary precision types.
+ * Requires C++14.
  */
 
 Files Included in this Package
