--- a/Interface/streaming/using_axi_stream_with_side_channel_data/README
+++ b/Interface/streaming/using_axi_stream_with_side_channel_data/README
@@ -1,5 +1,6 @@
 /*
- * Example C code for using loop labels in Vitis HLS
+ * Example C++ code for implementing an AXI stream interface in Vitis HLS using
+ * all side channels.
  */
 
 Files Included in this Package
