--- a/Interface/register/using_axi_lite/README
+++ b/Interface/register/using_axi_lite/README
@@ -1,13 +1,6 @@
-/*
- * Example C++ code for implementing an AXI4-lite interface in Vitis HLS
- */
+This example illustrates how an input argument of top level function can be mapped to AXI4-lite
 
-Files included in this package
-==================================================
-example_test.cpp
-example.cpp
-README
+Note the following interface #prgama used:
 
-Running the design (edit x_hls.tcl to run synthesis)
-=================================================
-vitis_hls -f run_hls.tcl
+#pragma HLS INTERFACE s_axilite port=a bundle=BUS_A
+
