--- a/Interface/using_axi_master/README
+++ b/Interface/using_axi_master/README
@@ -1,13 +1,7 @@
-/*
- * Example C++ code for implementing an AXI4-master interface in Vitis HLS
- */
+This example illustrates how an input argument of top level function can be mapped to AXI4-MEM
 
-Files Included in this Package
-==================================================
-example_test.cpp
-example.cpp
-README
+Block of Data read from the Device memory using AXI4 memory port, added and written back to Device memory using AXI4 memory port. All of these operations are done sequentially.
 
-Running the Design (edit x_hls.tcl to run synthesis)
-=================================================
-vitis_hls -f run_hls.tcl
+Note the following interface #prgama used:
+
+#pragma HLS INTERFACE m_axi port=a depth=50
