--- a/Modeling/Algorithms/fir_systolic_scalar/README
+++ b/Modeling/Algorithms/fir_systolic_scalar/README
@@ -1,4 +1,4 @@
-Example C code for implementing an 2D convolution in HLS
+Example C code for implementing an a FIR Systolic Filter in HLS
 
 Files Included in this Package
 ==============================
