--- a/Modeling/Algorithms/floating_mult_power_of_2/README
+++ b/Modeling/Algorithms/floating_mult_power_of_2/README
@@ -1,3 +1,5 @@
+Multiplies a floating point number by a power of 2.
+
 Files Included in this Package
 ==================================================
 fp_mul_pow2.c        - Implementation source file (top-level for example)
