--- a/Modeling/Algorithms/floating_mult_power_of_2/README
+++ b/Modeling/Algorithms/floating_mult_power_of_2/README
@@ -1,4 +1,4 @@
-Multiplies a floating point number by a power of 2.
+Advanced floating-point power of 2 with bounds checking and defining an helper typedefs to allow easy parsing of the IEEE-754 floating point fields.
 
 Files Included in this Package
 ==================================================
