update description and files

--- a/Modeling/Algorithms/template_fir_filter/README
+++ b/Modeling/Algorithms/template_fir_filter/README
@@ -1,11 +1,15 @@
 FIR filter using C++ template parameters
 
-File content:
-cpp_FIR.cpp
-cpp_FIR.h
-cpp_FIR.inc
-cpp_FIR_test.cpp
-proj_cpp_FIR
-result.golden.dat
-run_hls.tcl
-README
+Files Included in this Package
+==================================================
+cpp_FIR.cpp       - Top-level function
+cpp_FIR.h         - Header file providing function template
+cpp_FIR.inc       - Provides values used for test input
+cpp_FIR_test.cpp  - Testbench for use in C-simulation and RTL Co-simulation
+result.golden.dat - Test results used for comparison
+run_hls.tcl       - HLS run script
+README            - this file
+
+Running the Design
+=================================================
+vitis_hls -f run_hls.tcl
