--- a/Modeling/using_arbitrary_precision_arith/README
+++ b/Modeling/using_arbitrary_precision_arith/README
@@ -1,2 +1,4 @@
-This example illustrates how to use arbitrary precision ap_int/ap_uint data types.
+This example illustrates defining arbitrary precision variables through the ap_int.h library
+
+
 
