--- a/Modeling/using_arbitrary_precision_casting/README
+++ b/Modeling/using_arbitrary_precision_casting/README
@@ -1,10 +1,10 @@
-This simple test illustrates how to cast between arbitrary precision ap_int/ap_uint data types. 
+This simple test illustrates casting to/from arbitrary precision data types defined through ap_int.h
 
 Files Included in this Package
 ==============================
-cpp_ap_int_arith.cpp
-cpp_ap_int_arith.h
-cpp_ap_int_arith_test.cpp
+arbitrary_precision_casting.cpp
+arbitrary_precision_casting.h
+arbitrary_precision_casting_test.cpp
 result.golden.dat
 run_hls.tcl
 README
