--- a/Modeling/using_C++_templates/README
+++ b/Modeling/using_C++_templates/README
@@ -1,2 +1,11 @@
-This simple example shows how to use and synthesize templatized functions.
+This simple example shows how to use C++ templatized struct to implement a tail-recursion Fibonacci algorithm
+
+Files included in this package:
+
+cpp_template.cpp
+cpp_template.h
+cpp_template_test.cpp
+result.golden.dat
+run_hls.tcl
+README
 
