added run_hls and filenames

--- a/Modeling/using_C++_templates/README
+++ b/Modeling/using_C++_templates/README
@@ -1,7 +1,7 @@
 This simple example shows how to use C++ templatized struct to implement a tail-recursion Fibonacci algorithm
 
 Files included in this package:
-
+===============================
 cpp_template.cpp
 cpp_template.h
 cpp_template_test.cpp
@@ -9,3 +9,6 @@ result.golden.dat
 run_hls.tcl
 README
 
+Running the Design (edit run_hls.tcl to enable specific run steps)
+=========================================================
+vitis_hls -f run_hls.tcl
