--- a/Modeling/using_C++_templates/README
+++ b/Modeling/using_C++_templates/README
@@ -1,4 +1,4 @@
-This simple example shows how to use C++ templatized struct to implement a tail-recursion Fibonacci algorithm
+This simple example shows how to use C++ templatized structs, used to implement a tail-recursion Fibonacci algorithm for example
 
 Files included in this package:
 ===============================
