--- a/Modeling/coding_remerge_ii2to1/README
+++ b/Modeling/coding_remerge_ii2to1/README
@@ -1,5 +1,18 @@
 This example illustrates coding example of achieving II=1 based on two sources using De-Mux/Mux mechanism.
 
+
+Files Included in this Package
+==============================
+example.cpp  
+example.h	
+example_test.cpp  
+README
+run_hls.tcl 
+
+Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
+=========================================================
+vitis_hls -f run_hls.tcl
+
 Note the following interface #prgama used:
 
 #pragma HLS PIPELINE II=1
