--- a/Interface/Streaming/using_axi_stream_with_side_channel_data/README
+++ b/Interface/Streaming/using_axi_stream_with_side_channel_data/README
@@ -1,6 +1,5 @@
 /*
- * Example C++ code for implementing an AXI stream interface in Vitis HLS using
- * all side channels.
+ * Example C++ code for implementing an AXI stream interface in Vitis HLS using all side channels.
  */
 
 Files Included in this Package
