--- a/Dataflow/Bypassing/input_bypass/README
+++ b/Dataflow/Bypassing/input_bypass/README
@@ -1,3 +1,3 @@
-This example shows a common issue with in a DATAFLOW Pipeline where the input arguments bypass the first function which causes performance degradation in the DATAFLOW pipeline. The solution shows how to fix the problem. 
+This example shows a common issue with in a DATAFLOW Pipeline where the input arguments bypass the first function which causes performance degradation in the DATAFLOW pipeline. The example shows both the problem and solution
 
 
