Modified README files and moved directories

--- a/Modeling/Pointers/multiple_pointers/README
+++ b/Modeling/Pointers/multiple_pointers/README
@@ -1,12 +1,13 @@
-This example shows how to rewrite without using explicit mallocs in the C/C++ code.
+This simple example show how a pointer can be made to point to different arrays
+in a synthesizeable design. 
 
 Files Included in this Package
 ==============================
-README
-malloc_removed.c
-malloc_removed.h
-malloc_removed_test.c
-result.golden.dat
+README  
+pointer_multi.c  
+pointer_multi.h  
+pointer_multi_test.c  
+result.golden.dat  
 run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
