--- a/Modeling/Pointers/basic_arithmetic/README
+++ b/Modeling/Pointers/basic_arithmetic/README
@@ -1,15 +1,16 @@
-This example shows how to rewrite without using explicit mallocs in the C/C++ code.
+This simple example illustrates the usage of synthesizeable pointer arithmetic. 
 
 Files Included in this Package
 ==============================
-README
-malloc_removed.c
-malloc_removed.h
-malloc_removed_test.c
-result.golden.dat
+README  
+pointer_arith.c  
+pointer_arith.h  
+pointer_arith_test.c  
+result.golden.dat  
 run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
 vitis_hls -f run_hls.tcl
+
 
