--- a/Modeling/Pointers/basic_pointers/README
+++ b/Modeling/Pointers/basic_pointers/README
@@ -1,15 +1,17 @@
-This example shows how to rewrite without using explicit mallocs in the C/C++ code.
+This example shows a simple pointer based design. 
 
 Files Included in this Package
 ==============================
-README
-malloc_removed.c
-malloc_removed.h
-malloc_removed_test.c
-result.golden.dat
+README  
+pointer_basic.c  
+pointer_basic.h  
+pointer_basic_test.c  
+result.golden.dat  
 run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
 vitis_hls -f run_hls.tcl
+
+
 
