--- a/Modeling/Pointers/stream_better/README
+++ b/Modeling/Pointers/stream_better/README
@@ -1,12 +1,13 @@
-This example shows how to rewrite without using explicit mallocs in the C/C++ code.
+This example shows an alternative to ap_fifo mode for pointers in the interface and uses
+ap_hs as the mode instead. 
 
 Files Included in this Package
 ==============================
-README
-malloc_removed.c
-malloc_removed.h
-malloc_removed_test.c
-result.golden.dat
+README  
+pointer_stream_better.c  
+pointer_stream_better.h  
+pointer_stream_better_test.c  
+result.golden.dat  
 run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
