--- a/Modeling/Pointers/using_double/README
+++ b/Modeling/Pointers/using_double/README
@@ -1,12 +1,12 @@
-This example shows how to rewrite without using explicit mallocs in the C/C++ code.
+This simple design illustrate the usage of the C native double data type. 
 
 Files Included in this Package
 ==============================
-README
-malloc_removed.c
-malloc_removed.h
-malloc_removed_test.c
-result.golden.dat
+README  
+pointer_double.c  
+pointer_double.h  
+pointer_double_test.c  
+result.golden.dat  
 run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
