Removed text that described the renaming of hls::stream port names

--- a/Interface/Aggregation_Disaggregation/auto_disaggregation_of_struct/README
+++ b/Interface/Aggregation_Disaggregation/auto_disaggregation_of_struct/README
@@ -1,14 +1,8 @@
 Using a hls::stream object inside a structure that is used in the
 interface will cause the struct port to be automatically disaggregated
 by the Vitis HLS compiler. The generated RTL interface will contain
-separate RTL ports for the hls::stream object s_in (named d_s_in_V_*)
+separate RTL ports for the hls::stream object s_in (named d_s_in_*)
 and separate RTL ports for the array arr (named d_arr_*).
-
-Note: Using hls::streams<> in the interface can cause the port name to
-be renamed. The stream port name is changed from "portA" to
-"portA_V". Note that this can occur even if the hls::stream is a
-member of a class or struct. This was done for backward compatibility
-with several HLS IPs.
 
 
 Files Included in this Package
