--- a/Vitis/multiple_kernels/README
+++ b/Vitis/multiple_kernels/README
@@ -1,4 +1,4 @@
-The example shows the coding guidlenes for multiple kernels and steps to build the xclbin using Vitis
+This is a reference design for Vitis HLS user to demonstrate integration of multiple HLS kernels into Vitis flow to build xclbin and run the design on board or emulation flow.
 
 Included in this Package
 =========================
