--- a/Vitis/multiple_kernels/vadd_kernel/README
+++ b/Vitis/multiple_kernels/vadd_kernel/README
@@ -1,5 +1,4 @@
-The example shows the coding guidlenes for HLS Kernel optimized code, export to Vitis to build the xclbin by the tool
-
+This is a reference design for Vitis HLS user to demonstrate integration of a HLS kernel into Vitis flow to build xclbin and run the design on board or emulation flow.
 
 Included in this Package
 =========================
