--- a/Vitis/single_kernel/README
+++ b/Vitis/single_kernel/README
@@ -1,4 +1,4 @@
-The example shows the coding guidlenes for vadd kernel and steps to build the xclbin using Vitis
+This is a reference design for Vitis HLS user to demonstrate integration of HLS kernel into Vitis flow to build xclbin and run the design on board or emulation flow.
 
 Included in this Package
 =========================
