Name change from Task-Channel to Data-driven TLP and from Dataflow to Control-Driven TLP

--- a/Task_level_Parallelism/Data_driven/mixed_control_and_data_driven/README
+++ b/Task_level_Parallelism/Data_driven/mixed_control_and_data_driven/README
@@ -1,4 +1,5 @@
-This example shows how to use both Task-Channel and Dataflow models in the same design.
+This example shows how to use both Control-driven and Data-driven Task-level parallelism 
+models in the same design.
 
 Files Included in this Package
 ==============================
