--- a/Task_level_Parallelism/Data_driven/simple_data_driven/README
+++ b/Task_level_Parallelism/Data_driven/simple_data_driven/README
@@ -1,4 +1,4 @@
-This example shows how to use the task-channel model in a design. 
+This example shows how to use the data-driven task-level parallelism model in a design. 
 
 Files Included in this Package
 ==============================
