--- a/Task_level_Parallelism/Data_driven/handling_deadlock/README
+++ b/Task_level_Parallelism/Data_driven/handling_deadlock/README
@@ -1,4 +1,4 @@
-This example shows how to debug a task-channel model that deadlocks when
+This example shows how to debug a data-driven task-level parallelsim model that deadlocks when
 running C simulation.
 
 Files Included in this Package
