--- a/Interface/Streaming/using_axi_stream_with_struct/README
+++ b/Interface/Streaming/using_axi_stream_with_struct/README
@@ -1,7 +1,5 @@
-/*
- * Example C++ code for implementing an AXI stream interface in Vitis HLS using
- * only the TDATA field and AXI handshake signals.
- */
+Example C++ code for implementing an AXI stream interface in Vitis HLS using
+only the TDATA field and AXI handshake signals.
 
 Files Included in this Package
 ==================================================
