--- a/Interface/Streaming/using_axis_array_stream_no_side_channel_data/README
+++ b/Interface/Streaming/using_axis_array_stream_no_side_channel_data/README
@@ -1,7 +1,4 @@
-/*
- *
- :Example C++ code for implementing an AXI array to stream with no side channels .
- */
+Example C++ code for implementing an AXI array to stream with no side channels
 
 Files Included in this Package
 ==================================================
