--- a/Interface/Streaming/using_axi_stream_no_side_channel_data/README
+++ b/Interface/Streaming/using_axi_stream_no_side_channel_data/README
@@ -1,6 +1,4 @@
-/
- * Example C++ code for implementing an AXI stream interface in Vitis HLS using no side channels.
- */
+Example C++ code for implementing an AXI stream interface in Vitis HLS using no side channels.
 
 Files Included in this Package
 ==================================================
