--- a/Interface/Streaming/using_axi_stream_with_custom_side_channel_data_2/README
+++ b/Interface/Streaming/using_axi_stream_with_custom_side_channel_data_2/README
@@ -1,5 +1,5 @@
-Example C++ code for implementing an AXI stream interface in Vitis HLS using all side channels.
-(TDATA, TKEEP, TSTRB, TLAST and TUSER)
+Example C++ code for implementing an AXI stream interface in Vitis HLS using only TUSER and TLAST channels
+with no TDATA. 
 
 Files Included in this Package
 ==================================================
