--- a/Task_level_Parallelism/Data_driven/unsynchronized_io_scalar/README
+++ b/Task_level_Parallelism/Data_driven/unsynchronized_io_scalar/README
@@ -9,5 +9,5 @@ README
 
 Running the Design 
 =========================================================
-vitis_hls -f script.tcl
+vitis_hls -f run_hls.tcl
 
