--- a/Array/array_partition_block_cyclic/README
+++ b/Array/array_partition_block_cyclic/README
@@ -17,6 +17,6 @@ Running the design using Vitis v++ and vitis-run commands
 =====================================================
 ./run_vitis_commandline.sh
 
-Running the design using python API
+Running the design using python script
 =====================================================
-vitis -s project.py
+vitis -s run.py
