added instruction to run using python script

--- a/Pipelining/Loops/using_free_running_pipeline/README
+++ b/Pipelining/Loops/using_free_running_pipeline/README
@@ -19,4 +19,6 @@ The Pipeline architecture can be implemented in 3 modes:
  =========================================================
  vitis_hls -f run_hls.tcl
 
-
+ Running the design using python script
+ =====================================================
+ vitis -s run.py
