--- a/Array/array_partition_complete/README
+++ b/Array/array_partition_complete/README
@@ -8,6 +8,7 @@ matmul_partition.h
 matmul_partition_test.cpp
 run_hls.tcl
 run_vitis_commandline.sh
+run.py
 
 Running the Design using Vitis HLS (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
