--- a/Misc/fft/interface_stream/README
+++ b/Misc/fft/interface_stream/README
@@ -31,10 +31,14 @@ fft_tb.cpp  : C testbench
 fft_top.cpp : top C function fft_top
 ffp_top.h   : header file for the example 
 run_hls.tcl : script to run synthesis, simulation and export IP
+run.py	    : script to run csimulation, csynthesis and cosimulation using vitis
 README      : this readme file
 
 Run Example
 ======================
 Open a command prompt with vitis tools set up and then run the command below
     vitis_hls -f run_hls.tcl
+
+Run the command below for python script
+    vitis -s run.py
 
