--- a/Task_level_Parallelism/Data_driven/using_directio_hs_in_tasks/README
+++ b/Task_level_Parallelism/Data_driven/using_directio_hs_in_tasks/README
@@ -3,9 +3,12 @@ This example shows unsynchronized I/O scalars with hls::task
 
 Files Included in this Package
 ==============================
-dut.cpp    
-dut_tb.cpp
-script.tcl
+test.cpp
+test.h
+test_tb.cpp    
+run_hls.tcl
+run.py
+config.cfg
 README
 
 Running the Design 
