--- a/Task_level_Parallelism/Data_driven/using_maxi_in_tasks/README
+++ b/Task_level_Parallelism/Data_driven/using_maxi_in_tasks/README
@@ -10,7 +10,12 @@ run.py
 config.cfg
 README
 
+
 Running the Design 
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis -s run.py
 
+
+Running the Design 
+=========================================================
+vitis-run --mode hls --tcl run_hls.tcl
