added json files

--- a/Task_level_Parallelism/Data_driven/using_directio_hs_in_tasks/README
+++ b/Task_level_Parallelism/Data_driven/using_directio_hs_in_tasks/README
@@ -1,4 +1,4 @@
-This example shows unsynchronized I/O scalars with hls::task
+This example shows Direct I/O scalars with hls::task
 
 
 Files Included in this Package
