Changed vitis_hls command to vitis-run

--- a/Interface/Memory/burst_rw/README
+++ b/Interface/Memory/burst_rw/README
@@ -12,7 +12,7 @@ run_vitis_commandline.sh
 
 Running the Design using Vitis HLS (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Run the design using Vitis v++ and vitis-run commands
 =====================================================
