--- a/Interface/Memory/manual_burst/manual_burst_with_conditionals/README
+++ b/Interface/Memory/manual_burst/manual_burst_with_conditionals/README
@@ -12,5 +12,5 @@ memory accesses that are guarded by conditional expressions.
 
  Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
  =========================================================
- vitis_hls -f run_hls.tcl
+ vitis-run --mode hls --tcl run_hls.tcl
 
