--- a/Interface/Streaming/using_axi_stream_no_side_channel_data/README
+++ b/Interface/Streaming/using_axi_stream_no_side_channel_data/README
@@ -8,4 +8,4 @@ README
 
 Running the Design (edit x_hls.tcl to run synthesis)
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
