--- a/Misc/initialization_and_reset/static_struct_with_array_RAM_Versal/README
+++ b/Misc/initialization_and_reset/static_struct_with_array_RAM_Versal/README
@@ -13,7 +13,7 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Things to note:
 ----------------
