--- a/Misc/rtl_as_blackbox/README
+++ b/Misc/rtl_as_blackbox/README
@@ -17,7 +17,7 @@ run.py
 
 Running the Design (edit x_hls.tcl to run synthesis)
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Running the design using python script
 =====================================================
