--- a/Modeling/free_running_kernel_remerge_ii4to1/README
+++ b/Modeling/free_running_kernel_remerge_ii4to1/README
@@ -11,7 +11,7 @@ run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Note the following interface #prgama used:
 
