--- a/Modeling/using_C++_templates/README
+++ b/Modeling/using_C++_templates/README
@@ -11,4 +11,4 @@ README
 
 Running the Design (edit run_hls.tcl to enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
