--- a/Modeling/using_arbitrary_precision_arith/README
+++ b/Modeling/using_arbitrary_precision_arith/README
@@ -11,5 +11,5 @@ README
 
 Running the Design (edit run_hls.tcl to enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
