--- a/Pipelining/Loops/perfect_loop/README
+++ b/Pipelining/Loops/perfect_loop/README
@@ -15,6 +15,6 @@ result.golden.dat
 
  Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
  =========================================================
- vitis_hls -f run_hls.tcl
+ vitis-run --mode hls --tcl run_hls.tcl
 
 
