--- a/Task_level_Parallelism/Data_driven/handling_deadlock/README
+++ b/Task_level_Parallelism/Data_driven/handling_deadlock/README
@@ -11,7 +11,7 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Steps to debug the resulting deadlock error that is reported by csim_design command:
 ====================================================================================
