--- a/Array/array_partition_complete/README
+++ b/Array/array_partition_complete/README
@@ -12,7 +12,7 @@ run.py
 
 Running the Design using Vitis HLS (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Running the design using Vitis v++ and vitis-run commands
 =====================================================
