--- a/Interface/Aggregation_Disaggregation/auto_disaggregation_of_struct/README
+++ b/Interface/Aggregation_Disaggregation/auto_disaggregation_of_struct/README
@@ -15,7 +15,7 @@ run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Vitis HLS will issue the following messages in the log file:
 
