--- a/Interface/Aggregation_Disaggregation/struct_ii_issue/README
+++ b/Interface/Aggregation_Disaggregation/struct_ii_issue/README
@@ -16,5 +16,5 @@ run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
