--- a/Interface/Memory/coefficient_filter/README
+++ b/Interface/Memory/coefficient_filter/README
@@ -16,5 +16,5 @@ README             - this file
 
 Running the Design
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
