--- a/Interface/Streaming/using_axi_stream_with_custom_side_channel_data_1/README
+++ b/Interface/Streaming/using_axi_stream_with_custom_side_channel_data_1/README
@@ -9,4 +9,4 @@ README
 
 Running the Design (edit x_hls.tcl to run synthesis)
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
