--- a/Misc/fft/interface_stream/README
+++ b/Misc/fft/interface_stream/README
@@ -37,7 +37,7 @@ README      : this readme file
 Run Example
 ======================
 Open a command prompt with vitis tools set up and then run the command below
-    vitis_hls -f run_hls.tcl
+    vitis-run --mode hls --tcl run_hls.tcl
 
 Run the command below for python script
     vitis -s run.py
