--- a/Modeling/Pointers/stream_good/README
+++ b/Modeling/Pointers/stream_good/README
@@ -11,7 +11,7 @@ run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 Note the following directives in run_hls.tcl:
 set_directive_interface -depth 4 -mode ap_fifo "pointer_stream_good" d_i
