--- a/Modeling/using_C++_templates_for_multiple_instances/README
+++ b/Modeling/using_C++_templates_for_multiple_instances/README
@@ -15,4 +15,4 @@ README
 
 Running the Design (edit run_hls.tcl to enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
