--- a/Modeling/using_float_and_double/README
+++ b/Modeling/using_float_and_double/README
@@ -10,4 +10,4 @@ README               - This file
 
 Running the design
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
