--- a/Modeling/variable_bound_loops/README
+++ b/Modeling/variable_bound_loops/README
@@ -12,7 +12,7 @@ run_hls.tcl
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 
 Note the following directives that are applied on the variable bounded loop:
