--- a/Pipelining/Functions/function_instantiate/README
+++ b/Pipelining/Functions/function_instantiate/README
@@ -8,4 +8,4 @@ README
 
 Running the design (edit x_hls.tcl to run synthesis)
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
