--- a/Pipelining/Functions/hier_func/README
+++ b/Pipelining/Functions/hier_func/README
@@ -13,4 +13,4 @@ run_hls.tcl
 
 Running the design (edit x_hls.tcl to run synthesis)
 =================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
