--- a/Task_level_Parallelism/Control_driven/Channels/using_fifos/README
+++ b/Task_level_Parallelism/Control_driven/Channels/using_fifos/README
@@ -11,7 +11,7 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 This is done by changing the default channel type via the TCL config_dataflow 
 directive in the run_hls.tcl file. 
