--- a/Task_level_Parallelism/Control_driven/Channels/using_stream_of_blocks/README
+++ b/Task_level_Parallelism/Control_driven/Channels/using_stream_of_blocks/README
@@ -12,7 +12,7 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
 For optimal performance with stream of blocks, the application should exhibit the following behavior:
    * when you have some data that is written and read partially sequentially (which can be streamed) and 
