--- a/Task_level_Parallelism/Control_driven/Patterns/middle_bypass/README
+++ b/Task_level_Parallelism/Control_driven/Patterns/middle_bypass/README
@@ -11,6 +11,6 @@ This is a common DATAFLOW issue, where the channels inside the DATAFLOW are not 
 
  Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
  =========================================================
- vitis_hls -f run_hls.tcl
+ vitis-run --mode hls --tcl run_hls.tcl
 
 
