--- a/Task_level_Parallelism/Control_driven/Patterns/output_bypass/README
+++ b/Task_level_Parallelism/Control_driven/Patterns/output_bypass/README
@@ -10,5 +10,5 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
 
