--- a/Task_level_Parallelism/Control_driven/Channels/autorestart/README
+++ b/Task_level_Parallelism/Control_driven/Channels/autorestart/README
@@ -1,4 +1,4 @@
-This example shows how to use the default PIPOs as the channel type.
+This example shows how to use auto restart and Dataflow default PIPOs as the channel type.
 
 Files Included in this Package
 ==============================
@@ -11,4 +11,4 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis-run --mode hls --tcl run_hls.tcl
+vitis_hls -f run_hls.tcl
