--- a/Task_level_Parallelism/Control_driven/Channels/autorestart/README
+++ b/Task_level_Parallelism/Control_driven/Channels/autorestart/README
@@ -11,4 +11,4 @@ README
 
 Running the Design (edit run_hls.tcl to set $hls_exec and enable specific run steps)
 =========================================================
-vitis_hls -f run_hls.tcl
+vitis-run --mode hls --tcl run_hls.tcl
