--- a/DSP/fft/interface_stream/README
+++ b/DSP/fft/interface_stream/README
@@ -1,7 +1,7 @@
 Description
 ===========
    C++ source code example for AMD/Xilinx LogiCORE FFT.
-   This example is a 1,024 point FFT with streaming input and output data.
+   This example is a 1,024 point FFT with stream input and output data.
 
 Files
 =====
@@ -9,10 +9,13 @@ data        : Directory with data (stimuli and results) used by the testbench.
 fft_tb.cpp  : C testbench.
 fft_top.cpp : Top function fft_top.
 ffp_top.h   : Header file that sets the FFT parameters via its config struct.
-run.py	    : Script to run C simulation, C synthesis and co-simulation using Vitis.
+run.py	   : Script to run C simulation, C synthesis and co-simulation using Vitis.
+run_hls.tcl	: Script to run C simulation, C synthesis and co-simulation using Vitis.
 README      : This readme file.
 
 Run Example
 ===========
 Run the command below (Python script)
     vitis -s run.py
+or use Tcl:
+    vitis-run --mode hls --tcl run_hls.tcl
