--- a/DSP/fft/interface_stream_float_ssr2/README
+++ b/DSP/fft/interface_stream_float_ssr2/README
@@ -1,7 +1,7 @@
 Description
 ===========
        C++ source code example for AMD/Xilinx LogiCORE FFT.
-       This example is a 1,024 FFT (SSR=2) with floating-point data.
+       This example is a 1,024 pts FFT (SSR=2) with floating-point data.
        (the FFT_SSR user macro in fft_top.h can modify this example to create a 64 pts FFT with SSR=4)
  
 Files
@@ -11,10 +11,13 @@ data-ssr4   : Directory with data when macro FFT_SSR is set to 4 (SSR=4).
 fft_tb.cpp  : C testbench.
 fft_top.cpp : Top function fft_top.
 ffp_top.h   : Header file that sets the FFT parameters via its config struct.
-run.py	    : Script to run C simulation, C synthesis and co-simulation using Vitis.
+run.py	     : Script to run C simulation, C synthesis and co-simulation using Vitis.
+run_hls.tcl : Script to run C simulation, C synthesis and co-simulation using Vitis.
 README      : This readme file.
 
 Run Example
 ===========
 Run the command below (Python script)
     vitis -s run.py
+Or use Tcl:
+    vitis-run --mode hls --tcl run_hls.tcl
