--- a/DSP/fft/interface_array/README
+++ b/DSP/fft/interface_array/README
@@ -8,7 +8,7 @@ Files
 data        : Directory with data (stimuli and results) used by the testbench.
 fft_tb.cpp  : C testbench.
 fft_top.cpp : Top function fft_top.
-ffp_top.h   : Header file that sets the FFT parameters via its config struct.
+fft_top.h   : Header file that sets the FFT parameters via its config struct.
 run.py	   : Script to run C simulation, C synthesis and co-simulation using Vitis.
 run_hls.tcl	: Script to run C simulation, C synthesis and co-simulation using Vitis.
 README      : This readme file.
